--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
         <div id="app-list"></div>
     </div>
 
+    <!-- Önce veri dosyası -->
     <script src="apps.js"></script>
+    <!-- Sonra listeleme mantığı -->
     <script src="script.js"></script>
 </body>
 </html>
