--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
         <div id="app-list"></div>
     </div>
 
+    <!-- Pop-up -->
+    <div id="popup" class="popup hidden">
+        <div class="popup-content">
+            <span id="popup-close">&times;</span>
+            <h2 id="popup-title"></h2>
+            <pre id="popup-instructions"></pre>
+        </div>
+    </div>
+
     <!-- Önce veri dosyası -->
     <script src="apps.js"></script>
     <!-- Sonra listeleme mantığı -->
