--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="container">
+        <h1>Linux Uygulama Destek Durumu</h1>
         <input type="text" id="search" placeholder="Uygulama ara...">
         <div id="app-list"></div>
     </div>
