--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="popup-content">
             <span id="popup-close">&times;</span>
             <h2 id="popup-title"></h2>
-            <pre id="popup-instructions"></pre>
+            <div id="popup-instructions"></div>
         </div>
     </div>
 
@@ -27,4 +27,4 @@
     <!-- Sonra listeleme mantığı -->
     <script src="script.js"></script>
 </body>
-</html>
+            </html>
