--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
 
         <div class="stats" id="stats">
             <div class="stat-item" role="presentation">
+                <span class="stat-icon">✅</span>
                 <span class="stat-number" id="supported-count">0</span>
-                <span class="stat-label">Desteklenen</span>
             </div>
             <div class="stat-item" role="presentation">
+                <span class="stat-icon">❌</span>
                 <span class="stat-number" id="unsupported-count">0</span>
-                <span class="stat-label">Desteklenmeyen</span>
             </div>
             <div class="stat-item" role="presentation">
+                <span class="stat-icon">🗄️</span>
                 <span class="stat-number" id="total-count">0</span>
-                <span class="stat-label">Toplam</span>
             </div>
         </div>
 
@@ -49,4 +49,4 @@
     <script src="apps.js?v=2.0.0"></script>
     <script src="script.js?v=2.0.0"></script>
 </body>
-</html>
+    </html>
