--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>dtxapplist ⁉️</title>
-    <link rel="stylesheet" href="style.css?v=2.0.0">
+    <meta name="description" content="Popüler uygulamaların Linux desteğini keşfedin">
 </head>
 <body>
     <div class="container">
@@ -79,8 +79,7 @@
         <span class="toast-message">Komut kopyalandı!</span>
     </div>
 
-    <!-- Sıralı yükleme -->
-    <script src="apps.js?v=2.0.0"></script>
-    <script src="script.js?v=2.0.0"></script>
+    <!-- Asset Loader -->
+    <script src="assest/loader.js"></script>
 </body>
-</html>
+    </html>
