--- a/index.html
+++ b/index.html
@@ -136,19 +136,59 @@
             font-size: 20px;
         }
 
-        /* Loading spinner */
+        /* Loading indicator styles */
+        .loading-container {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: var(--bg-primary);
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            z-index: 9999;
+        }
+
         .loading-spinner {
-            display: inline-block;
-            width: 20px;
-            height: 20px;
-            border: 3px solid var(--accent-primary);
+            width: 40px;
+            height: 40px;
+            border: 4px solid var(--border-color);
             border-radius: 50%;
-            border-top-color: transparent;
-            animation: spin 1s ease-in-out infinite;
+            border-top-color: var(--accent-primary);
+            animation: spin 1s linear infinite;
+            margin-bottom: 20px;
+        }
+
+        .loading-text {
+            color: var(--text-secondary);
+            font-size: 1.1rem;
+            font-weight: 500;
+            margin-bottom: 10px;
+        }
+
+        .loading-subtext {
+            color: var(--text-muted);
+            font-size: 0.9rem;
+            opacity: 0.8;
         }
 
         @keyframes spin {
             to { transform: rotate(360deg); }
+        }
+
+        /* Loading dots animation */
+        .loading-dots::after {
+            content: '';
+            animation: dots 1.5s steps(4, end) infinite;
+        }
+
+        @keyframes dots {
+            0%, 20% { content: ''; }
+            40% { content: '.'; }
+            60% { content: '..'; }
+            80%, 100% { content: '...'; }
         }
 
         /* Responsive */
@@ -168,9 +208,10 @@
 </head>
 <body>
     <!-- Loading indicator -->
-    <div id="loading-indicator" style="position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); z-index: 9999;">
+    <div id="loading-indicator" class="loading-container">
         <div class="loading-spinner"></div>
-        <p style="margin-top: 10px; color: var(--text-secondary);">Yükleniyor...</p>
+        <div class="loading-text">Linux App Hub Yükleniyor<span class="loading-dots"></span></div>
+        <div class="loading-subtext">Uygulama verileri hazırlanıyor</div>
     </div>
 
     <div class="container" style="opacity: 0; transition: opacity 0.5s ease;" id="main-content">
@@ -269,8 +310,13 @@
                         cssLoaded++;
                         if (cssLoaded === totalCSS) {
                             // CSS yüklendi, içeriği göster
-                            mainContent.style.opacity = '1';
-                            loadingIndicator.style.display = 'none';
+                            setTimeout(() => {
+                                mainContent.style.opacity = '1';
+                                loadingIndicator.style.opacity = '0';
+                                setTimeout(() => {
+                                    loadingIndicator.style.display = 'none';
+                                }, 500);
+                            }, 200); // Kısa bir gecikme ekle
                         }
                     };
                     document.head.appendChild(link);
@@ -285,4 +331,4 @@
         })();
     </script>
 </body>
-                </html>
+                    </html>
