--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             (window.vaq = window.vaq || []).push(arguments);
         };
     </script>
+    <script defer src="https://va.vercel-scripts.com/v1/script.js"></script>
     
     <style>
         /* Critical CSS */
