--- a/index.html
+++ b/index.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html lang="tr" data-theme="dark">
-<head>
-    <meta charset="UTF-8">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Linux App Hub - Analytics Powered</title>
     <meta name="description" content="Popüler uygulamaların Linux desteğini keşfedin - En popüler uygulamaları takip edin">
     
-    <!-- Vercel Analytics - Manuel yükleme analytics.js tarafından yapılacak -->
+    <!-- Vercel Analytics - Bu satırları ekleyin -->
     <script>
-        // Analytics configuration for Vercel
-        window.va = window.va || function () {
-            (window.vaq = window.vaq || []).push(arguments);
+        window.va = window.va || function () { 
+            (window.vaq = window.vaq || []).push(arguments); 
         };
     </script>
     <script defer src="https://va.vercel-scripts.com/v1/script.js"></script>
